--- a/src/main/resources/kisiel/jakub/websocketchat/client/ChatGUI.fxml
+++ b/src/main/resources/kisiel/jakub/websocketchat/client/ChatGUI.fxml
@@ -37,7 +37,6 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kisiel.jakub.websocketchat.client.ChatGuiController">
    <children>
-      <ScrollPane id="scrollPane" fx:id="scrollField" layoutY="33.0" prefHeight="378.0" prefWidth="606.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <AnchorPane layoutY="343.0" prefHeight="47.0" prefWidth="606.0" style="-fx-background-color: #16507E;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <Button id="sendButton" fx:id="sendButton" alignment="BASELINE_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#sendButtonAction" text="Send" AnchorPane.bottomAnchor="12.0" AnchorPane.rightAnchor="30.0" />
@@ -46,12 +45,14 @@
       </AnchorPane>
       <AnchorPane AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Pane nodeOrientation="LEFT_TO_RIGHT" prefHeight="34.0" prefWidth="606.0" style="-fx-background-color: #16507E;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <AnchorPane style="-fx-background-color: #16507E;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Button id="connectButton" fx:id="connectButton" layoutX="14.0" layoutY="5.0" mnemonicParsing="false" onAction="#connectButtonAction" text="Connect" />
+                  <TextField fx:id="port" promptText="enter port" AnchorPane.leftAnchor="120.0" />
+                  <Button id="connectButton" fx:id="connectButton" mnemonicParsing="false" onAction="#connectButtonAction" text="Connect" AnchorPane.leftAnchor="20.0" />
                </children>
-            </Pane>
+            </AnchorPane>
          </children>
       </AnchorPane>
+      <TextArea fx:id="messages" layoutX="-2.0" layoutY="24.0" prefHeight="329.0" prefWidth="600.0" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
    </children>
 </AnchorPane>
