File sending first version

--- a/src/main/resources/kisiel/jakub/websocketchat/client/ChatGUI.fxml
+++ b/src/main/resources/kisiel/jakub/websocketchat/client/ChatGUI.fxml
@@ -51,7 +51,7 @@
                   <Button id="connectButton" fx:id="connectButton" mnemonicParsing="false" onAction="#connectButtonAction" text="Connect" AnchorPane.leftAnchor="20.0" />
                   <Button fx:id="cbc" layoutX="274.0" mnemonicParsing="false" onAction="#cbcAction" text="CBC" />
                   <Button fx:id="ecb" layoutX="320.0" mnemonicParsing="false" onAction="#ecbAction" text="ECB" />
-                  <Button fx:id="file" layoutX="367.0" mnemonicParsing="false" text="Send file" />
+                  <Button fx:id="file" layoutX="367.0" mnemonicParsing="false" onAction="#fileAction" text="Send file" />
                </children>
             </AnchorPane>
          </children>
