--- a/src/main/resources/kisiel/jakub/websocketchat/client/ChatGUI.fxml
+++ b/src/main/resources/kisiel/jakub/websocketchat/client/ChatGUI.fxml
@@ -32,30 +32,76 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kisiel.jakub.websocketchat.client.ChatGuiController">
-   <children>
-      <AnchorPane layoutY="343.0" prefHeight="47.0" prefWidth="606.0" style="-fx-background-color: #16507E;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-         <children>
-            <Button id="sendButton" fx:id="sendButton" alignment="BASELINE_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#sendButtonAction" text="Send" AnchorPane.bottomAnchor="12.0" AnchorPane.rightAnchor="30.0" />
-            <TextField id="textField" fx:id="textField" layoutY="5.0" onAction="#textFieldAction" prefHeight="25.0" prefWidth="493.0" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="100.0" />
-         </children>
-      </AnchorPane>
-      <AnchorPane AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <AnchorPane style="-fx-background-color: #16507E;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <TextField fx:id="port" promptText="enter port" AnchorPane.leftAnchor="120.0" />
-                  <Button id="connectButton" fx:id="connectButton" mnemonicParsing="false" onAction="#connectButtonAction" text="Connect" AnchorPane.leftAnchor="20.0" />
-                  <Button fx:id="cbc" layoutX="274.0" mnemonicParsing="false" onAction="#cbcAction" text="CBC" />
-                  <Button fx:id="ecb" layoutX="320.0" mnemonicParsing="false" onAction="#ecbAction" text="ECB" />
-                  <Button fx:id="file" layoutX="367.0" mnemonicParsing="false" onAction="#fileAction" text="Send file" />
-               </children>
-            </AnchorPane>
-         </children>
-      </AnchorPane>
-      <TextArea fx:id="messages" layoutX="-2.0" layoutY="24.0" prefHeight="329.0" prefWidth="600.0" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-   </children>
-</AnchorPane>
+<BorderPane minHeight="500.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kisiel.jakub.websocketchat.client.ChatGuiController">
+    <top>
+        <HBox alignment="CENTER_LEFT" style="-fx-background-color: #868B8E;" BorderPane.alignment="CENTER">
+            <children>
+                <TextField fx:id="port" promptText="enter port">
+                    <HBox.margin>
+                        <Insets left="10.0" />
+                    </HBox.margin>
+                </TextField>
+                <Button fx:id="connectButton" mnemonicParsing="false" onAction="#connectButtonAction" text="Connect">
+                    <HBox.margin>
+                        <Insets left="10.0" />
+                    </HBox.margin>
+                </Button>
+
+                <Button fx:id="cbc" mnemonicParsing="false" onAction="#cbcAction" text="CBC">
+                    <HBox.margin>
+                        <Insets left="10.0" />
+                    </HBox.margin>
+                </Button>
+                <Button fx:id="ecb" mnemonicParsing="false" onAction="#ecbAction" text="ECB">
+                    <HBox.margin>
+                        <Insets left="10.0" />
+                    </HBox.margin>
+                </Button>
+                <Button fx:id="file" mnemonicParsing="false" onAction="#fileAction" text="Send file">
+                    <HBox.margin>
+                        <Insets left="10.0" />
+                    </HBox.margin>
+                </Button>
+                <ProgressBar fx:id="fileProgress" prefWidth="200.0" progress="0.0">
+                    <HBox.margin>
+                        <Insets left="10.0" />
+                    </HBox.margin>
+                </ProgressBar>
+
+            </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+        </HBox>
+    </top>
+    <bottom>
+        <HBox alignment="CENTER" style="-fx-background-color: #868B8E;" BorderPane.alignment="CENTER">
+            <children>
+                <TextField fx:id="textField" onAction="#sendButtonAction" prefWidth="300.0">
+                    <HBox.margin>
+                        <Insets left="10.0" />
+                    </HBox.margin>
+                </TextField>
+            </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+        </HBox>
+    </bottom>
+    <center>
+        <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" style="-fx-background-color: #FEF6EB;">
+            <VBox fx:id="messages" alignment="BOTTOM_CENTER" spacing="10.0" style="-fx-background-color: #EEEDE7;">
+                <padding>
+                    <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
+                </padding>
+            </VBox>
+        </ScrollPane>
+    </center>
+</BorderPane>
